fix "open new table" button

--- a/zing-server/assets/index.html
+++ b/zing-server/assets/index.html
@@ -190,6 +190,7 @@
             logoutCaption,
             login,
             logout,
+            create_table,
             query_tables,
           };
         },
